# shape2D-triangulator

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main.py  shape.csv  testmain.cpp  tests.cpp  tests.hpp  triangles.txt  triangluator.hpp  triangulator.cpp
examples/: concave_horse.csv  concave_octagon.csv  convex_octagon.csv
examples/generator/: concave_10_7.csv
include/: tests.hpp  triangluator.hpp  triangulator.hpp
src/: tests.cpp  triangulator.cpp
